test_outputs/connlist/anp_banp_blog_demo_explain_output.txt

#####################################
# All Connections and their reasons #
#####################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN monitoring/mymonitoring[Pod] => baz/mybaz[Pod]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [ANP] allow-monitoring // Ingress rule allow-ingress-from-monitoring (Allow)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN monitoring/mymonitoring[Pod] => foo/myfoo[Pod]:

All Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (ALLOWED)
		1) [ANP] pass-monitoring // Ingress rule pass-ingress-from-monitoring (Pass)
		2) [NP] foo/allow-monitoring // Ingress rule #1


####################################
# No Connections and their reasons #
####################################
----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN 0.0.0.0-255.255.255.255 => foo/myfoo[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] foo/allow-monitoring // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN bar/mybar[Pod] => foo/myfoo[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] foo/allow-monitoring // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN baz/mybaz[Pod] => bar/mybar[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [BANP] default // Ingress rule deny-ingress-from-all-namespaces (Deny)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN baz/mybaz[Pod] => foo/myfoo[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [NP] foo/allow-monitoring // Ingress (captured but not selected by any Ingress rule)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN foo/myfoo[Pod] => bar/mybar[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [BANP] default // Ingress rule deny-ingress-from-all-namespaces (Deny)

----------------------------------------------------------------------------------------------------------------------------------------------------------------
CONNECTIONS BETWEEN monitoring/mymonitoring[Pod] => bar/mybar[Pod]:

No Connections due to the following policies // rules:
	EGRESS DIRECTION (ALLOWED) due to the system default (Allow all)
	INGRESS DIRECTION (DENIED)
		1) [ANP] pass-monitoring // Ingress rule pass-ingress-from-monitoring (Pass)
		2) [BANP] default // Ingress rule deny-ingress-from-all-namespaces (Deny)


#########################################################
# All Connections due to the system default (Allow all) #
#########################################################
0.0.0.0-255.255.255.255 => bar/mybar[Pod]
0.0.0.0-255.255.255.255 => baz/mybaz[Pod]
0.0.0.0-255.255.255.255 => monitoring/mymonitoring[Pod]
bar/mybar[Pod] => 0.0.0.0-255.255.255.255
bar/mybar[Pod] => baz/mybaz[Pod]
bar/mybar[Pod] => monitoring/mymonitoring[Pod]
baz/mybaz[Pod] => 0.0.0.0-255.255.255.255
baz/mybaz[Pod] => monitoring/mymonitoring[Pod]
foo/myfoo[Pod] => 0.0.0.0-255.255.255.255
foo/myfoo[Pod] => baz/mybaz[Pod]
foo/myfoo[Pod] => monitoring/mymonitoring[Pod]
monitoring/mymonitoring[Pod] => 0.0.0.0-255.255.255.255
